Fixed the missing workspace gap on the right side between the main workspace and the side ribbon when using Sliding panes.

--- a/src/scss/Plugins/Community/slidingPanes.scss
+++ b/src/scss/Plugins/Community/slidingPanes.scss
@@ -1,4 +1,7 @@
 /* #region  [Plugin - Community] Sliding Panes */
+body.plugin-sliding-panes .workspace > .mod-root {
+    margin-right: calc(var(--window-gap) / 2);
+}
 .theme-light.plugin-sliding-panes-stacking .workspace > .mod-root > .workspace-leaf,
 .theme-dark.plugin-sliding-panes-stacking .workspace > .mod-root > .workspace-leaf {
 	box-shadow: none;
